fix: Amend align in Button.vue

--- a/src/less/components/Button.less
+++ b/src/less/components/Button.less
@@ -7,6 +7,7 @@
   .icon {
     width: 14px;
     height: 14px;
+    margin-top: -2px;
   }
 
   &.v-btn-ghost {
